<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Part2.ProductOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/pName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_yellow001"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/hank_productName" />

            <TextView
                android:id="@+id/pPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_yellow001"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toEndOf="@+id/pName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.735"
                tools:text="@string/hank_price" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hank_dollar"
                android:textColor="@color/dark_yellow001"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pPrice"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.735" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/intentPic"
                android:layout_width="165dp"
                android:layout_height="202dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seriesDrinkMenuList"
                android:layout_width="419dp"
                android:layout_height="146dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/my_item_background002"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hank_hot_colon"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.053" />

            <TextView
                android:id="@+id/bigCalorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hank_daca"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.059" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hank_ca"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintStart_toEndOf="@+id/bigCalorie"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.059" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hank_sweet_colon"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.228" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hank_ice_colon"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.485" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hank_quantity_colon"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintVertical_bias="0.847" />

            <CheckBox
                android:id="@+id/noSugar"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:text="@string/hank_noSugar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.183" />

            <CheckBox
                android:id="@+id/microSugar"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:layout_marginStart="2dp"
                android:text="@string/hank_microSugar"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.279"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/noSugar"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/halfSugar"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:layout_marginStart="2dp"
                android:text="@string/hank_halfSugar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/noSugar"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/sugar"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:text="@string/hank_sugar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.752"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/noSugar"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/hot"
                android:layout_width="68dp"
                android:layout_height="43dp"
                android:text="@string/hank_hot"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.209"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/noIce"
                app:layout_constraintVertical_bias="0.426" />

            <CheckBox
                android:id="@+id/noIce"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:text="@string/hank_noIce"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/noSugar"
                app:layout_constraintVertical_bias="0.351" />

            <CheckBox
                android:id="@+id/microIce"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:layout_marginStart="2dp"
                android:text="@string/hank_microIce"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.352"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/noIce"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/lessIce"
                android:layout_width="67dp"
                android:layout_height="46dp"
                android:layout_marginStart="2dp"
                android:text="@string/hank_lessIce"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.565"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/noIce"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/ice"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:text="@string/hank_ice"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.794"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/noIce"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/productQuantity"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/hot"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="102dp"
                android:layout_height="38dp"
                android:text="@string/hank_addOrder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.935"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/hot"
                app:layout_constraintVertical_bias="0.437" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>